# tradingbot22-basebot

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
basebot22/: backtest.py  basebot.py
